[FIX] Bug when show total payment

--- a/ecomm/ecomm/templates/checkout.html
+++ b/ecomm/ecomm/templates/checkout.html
@@ -171,7 +171,7 @@
                         <!-- Biaya Pengiriman -->
                         <li class="list-group-item d-flex justify-content-between">
                             <span>Biaya Pengiriman (IDR)</span>
-                            <strong class="text-success" id="shipping-cost">0</strong>
+                            <strong class="text-muted" id="shipping-cost">0</strong>
                         </li>
 
                         <!-- Total Akhir -->
