--- a/ecomm/ecomm/templates/payment.html
+++ b/ecomm/ecomm/templates/payment.html
@@ -7,7 +7,7 @@
   <div class="d-flex justify-content-center">
     <div class="row justify-content-center">
       <div class="col pt-5 pb-5">
-        <p>Total belanjaan kamu : <strong>{{ order.get_total_harga_order|currency_idr }}</strong></p>
+        <p>Total belanjaan kamu : <strong>{{ order.get_total_harga_order_with_shipping_cost|currency_idr }}</strong></p>
         <br />
         {% if is_paypal %}
         <div>{{ paypalform.render }}</div>
