--- a/ecomm/ecomm/templates/account/login.html
+++ b/ecomm/ecomm/templates/account/login.html
@@ -5,60 +5,49 @@
 <head>
   <meta charset="UTF-8">
   <title>Log In</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="{% static '/css/style.css' %}">
-  <link href="{% static '/assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-  <link href="{% static '/assets/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
+  <link href='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css' rel='stylesheet'>
+  <link href='https://use.fontawesome.com/releases/v5.7.2/css/all.css' rel='stylesheet'>
+  <link rel="stylesheet" href="{% static '/css/login.css' %}">
 
 </head>
-
-<body>
-    <!-- partial:index.partial.html -->
-    <div class="logo text-center">
-      <h1>Log In</h1>
-    </div>
-    <div class="wrapper">
-      <div class="inner-warpper text-center">
-        <h2 class="title">Login to your account</h2>
+  <body oncontextmenu='return false' class='snippet-body login-form'>
+    <div class="wrapper bg-white">
+        <div class="h2 text-center text-success">Triokarya</div>
+        <div class="h4 text-muted text-center pt-2">Silahkan masuk</div>
         {% for message in messages %}
           {% if message.tags == 'error' %}
           <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
             <strong style="color: red">{{ message }}</strong>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
           </div>
           {% endif %}
         {% endfor %}
-
         <form action="/auth/login/" id="login_form" method="post">
           {% csrf_token %}
-
-          <div class="input-group">
-            <label class="placeholder" for="username">Username</label>
-            <input class="form-control" name="username" id="username" type="text" required />
-            <span class="lighting"></span>
+          <div class="form-group py-2">
+              <div class="input-field"> <span class="far fa-user p-2 text-success" ></span> 
+                <input type="text" name="username" id="username" placeholder="Username" required class=""> 
+              </div>
           </div>
-          <div class="input-group">
-            <label class="placeholder" for="pass1">Password</label>
-            <input class="form-control" name="password" id="pass1" type="password" required />
-            <span class="lighting"></span>
+          <div class="form-group py-1 pb-2">
+              <div class="input-field"> 
+                  <span class="fas fa-lock p-2 text-success"></span> 
+                  <input type="password" placeholder="Masukan Password" name="password" id="pass1"> 
+                  <i class="btn bg-white text-muted" id="togglePass1" style="cursor: pointer;" onclick="togglePasswordVisibility('pass1', 'iconPass1')">
+                      <span class="far fa-eye-slash" id="iconPass1"></span> 
+                  </i> 
+              </div>
           </div>
-
-          <button type="submit" id="login">Login</button>
-          {% comment %} <div class="clearfix supporter">
-            <a class="forgot pull-right" href="#">Forgot Password?</a>
-          </div> {% endcomment %}
+          <button class="btn btn-block text-center my-5 btn-success">Log in</button>
+          <div class="text-center pt-3 text-muted ">Belum punya akun? <a href="/auth/signup/" class="text-success">Daftar</a></div>
         </form>
-      </div>
-      <div class="signup-wrapper text-center">
-        <a href="/auth/signup/">Don't have an account? <span class="text-primary">Create One</span></a>
-      </div>
     </div>
+  </body>
 
-    <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.15.0/jquery.validate.min.js'></script>
-    <script src="{% static '/js/script.js' %}"></script>
-    <script src="{% static '/assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-</body>
-
+    
+    
+  <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'></script>
+  <script type='text/javascript'
+      src='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js'></script>
+  <script src="{% static '/js/login.js' %}"></script>
 
 </html>
