[UPDATE] Destionation & weight shipping cost

--- a/ecomm/ecomm/templates/checkout.html
+++ b/ecomm/ecomm/templates/checkout.html
@@ -61,7 +61,7 @@
         </div>
 
         <!-- Isi berdasarkan address yang dipilih pada modal atau yang disimpan di session -->
-        <div class="card my-4 selected-address">
+        <div class="card my-4 selected-address" required>
             <div class="card-body">
                 <div class="row">
                     <div class="col-md-6">
