--- a/ecomm/ecomm/templates/order_detail.html
+++ b/ecomm/ecomm/templates/order_detail.html
@@ -6,11 +6,12 @@
   <div class="row mt-4">
     <div class="col-md-5">
       <h3>Alamat Pengiriman</h3>
-      <p>{{ order.alamat_pengiriman.nama_penerima }}</p>
-      <p>{{ order.alamat_pengiriman.detail_alamat }}</p>
+      <p><b>{{ order.alamat_pengiriman.nama_penerima }}</b></p>
+      <p>{{ order.alamat_pengiriman.nomor_handphone }}</p>
       <p>{{ order.alamat_pengiriman.kelurahan }}, {{ order.alamat_pengiriman.kecamatan }}</p>
       <p>{{ order.alamat_pengiriman.kabupaten }}, {{ order.alamat_pengiriman.provinsi }}</p>
       <p>{{ order.alamat_pengiriman.kode_pos }}</p>
+      <p>{{ order.alamat_pengiriman.detail_alamat }}</p>
     </div>
     <div class="col-md-5">
       <h3>Metode Pembayaran</h3>
