--- a/ecomm/static/css/responsive.css
+++ b/ecomm/static/css/responsive.css
@@ -45,4 +45,8 @@
     padding: 0.25rem 0.5rem;
     /* Mengatur padding badge agar sesuai dengan ukuran font */
   }
+
+  .container .information-payment {
+    width: 350px !important;
+  }
 }
