--- a/ecomm/ecomm/templates/address_form.html
+++ b/ecomm/ecomm/templates/address_form.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block content %}
 <div class="container rounded bg-white mt-5 mb-5">
+    <a href="{% url 'toko:address_list' %}" class="btn btn-light">&larr; Back</a>
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="p-3 py-5">
