--- a/ecomm/ecomm/templates/account/signup.html
+++ b/ecomm/ecomm/templates/account/signup.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Log In</title>
+  <title>Triokarya - Log In</title>
   <link href='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css' rel='stylesheet'>
   <link href='https://use.fontawesome.com/releases/v5.7.2/css/all.css' rel='stylesheet'>
   <link rel="stylesheet" href="{% static '/css/login.css' %}">
