--- a/ecomm/ecomm/templates/order_summary.html
+++ b/ecomm/ecomm/templates/order_summary.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>shop cart - Bootdey.com</title>
+    <title>Triokarya</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="{% static '../static/css/cart.css' %}" rel="stylesheet">
