--- a/ecomm/ecomm/templates/about.html
+++ b/ecomm/ecomm/templates/about.html
@@ -12,7 +12,7 @@
                     </p>
                 </div>
                 <div class="col-md-4">
-                    <img src="{% static 'img/about-hero.svg' %}" alt="About Hero">
+                    <img class="about-hero" src="{% static 'img/about-hero.png' %}" alt="About Hero">
                 </div>
             </div>
         </div>
